base.css
/* about-img img is wrong. Theres more detail in the original */

html {
  scroll-behavior: smooth;
}
body {
  background-color: rgba(242, 242, 243, 1);
  width: 100%;
  padding: 0px;
  margin: 0px;
  overflow-x: hidden;
  color: #151041;
}
h1, h2, h3, h4 {
  font-family: 'Nunito', sans-serif;
}

p {
    font-family: 'Nunito', san-serif;
    color: #151041;
    font-weight: 100;
    font-size: 1vw;
}

a {
    text-decoration: none;
    color: #151041;
}

h4 {
  /* font-family: ''; */
    /* color: #8DA9D4; */
    font-size: 1rem;
}

#nav {
  background-color: #C2DF87;
  width: 100%;
  height: 8vh;

}

#bar {
  height: 8vh;
  width: 65vw;
  display: flex;
  margin: 0 auto;
  /* justify-content: center; */
  justify-content: flex-end;

}

.nav-link {
  height: 100%;
  padding-left: 2vw;

}

#title-box {
  text-align: center;
  vertical-align: middle;
  height: 100%;
  /* border-style: solid; */
  /* width: 50%; */
}

#title-text-box {
    margin: auto;
}

#title-text {
  font-family: 'Shrikhand', cursive;
  font-size: 6.7vw;
  text-align: center;
  margin: -5vh 0;
  font-weight: 100;
}

#title-left-upper {
    border-right: 0;
}

/* schedule: Monica's section */
#title-right-upper {
    border-left: 0;
}

#title-date-text {
  font-family: 'Nunito', sans-serif;
  font-weight: normal;
  font-size: 3vw;
  margin: 1rem 0;
  /* margin: auto 0; */
}

#title-sub-title {
    font-style: bold;
    font-size: 2vw;
    text-align: left;
}

.title-sub-text {
    text-align: left;
    margin-left: .5vw;
}

.section-title {
  width: 100%;
  border-bottom: 0.25rem solid black;
  flex-direction: column;
  flex-wrap: wrap;
  display: flex;
  height: 15%;
}

.section-title-text {

    text-align: left;
    font-style: bold;
    font-size: 2vw;
    margin: auto auto;
    margin-left: 2vw;
    /* text-align: center; */
}


/* schedule: Monica's section */
.section-title-text-time {
    text-align: right;
    font-style: bold;
    font-size: 2.5vw;
    margin: auto auto;
    margin-left: 2vw;
    /* text-align: center; */
}

.link-box {
    margin-left: 4vw;
    height: 70%;
}

#foot-img-box {
  background: #85AAB2;
  width: 25%;
  height: 70%;
  position: absolute;
  top: 15vh;
  right: -5vh;
}

#hand-img-box {
  background: #A90F65;
  width: 70%;
  height: 30%;
  position: absolute;
  top: 5vh;
  right: -30%;
  overflow-x: hidden;
}

#bike-img-box {
  /*background: #A90F65;*/
  width: 35%;
  height: 50%;
  position: absolute;
  top: 60%;
  right: -15%;
}

#envision-img-box {
  /*background: #A90F65;*/
  width: 20%;
  height: 20%;
  position: absolute;
  top: 25vh;
  left: -17vh;
}

#foot-img {
  position: absolute;
  left: 2vh;
  top: 2vh;
  width: 100%;
  height: 100%;
}

#bike-img {
  position: absolute;
  left: 2vh;
  top: 2vh;
  width: 100%;
  height: 100%;
}

#envision-img {
  position: absolute;
  transform: rotate(20deg);
  /* left: 2vh; */
  /* top: 2vh; */
  left: 5%;
  top: 5%;
  width: 100%;
  height: 100%;
}

.link-item {
    text-align: left;
    margin-top: 7.5%;
}

/* schedule: Monica's section */
.link-item-schedule {
    text-align: left;
    margin-top: 1vw;
    margin-right: 0vw;
}

.link-item-schedule-2 {
    text-align: left;
    margin-top: 1vw;
    margin-left: 0.7vw;
*/}

.link-title-text {
    text-align: left;
    font-style: bold;
    font-size: 2vw;
    margin: auto auto;

}

/* schedule: Monica's section */
  .link-title-text-time {
    text-align: right;
    font-style: bold;
    font-size: 2vw;
    margin: auto auto;
  }

  .link-title-text-time-2 {
    text-align: left;
    font-style: bold;
    font-size: 2vw;
    margin: auto auto;
  }

.link-subtext {
    margin-top: 0;
    margin-bottom: auto;
}

.page {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  align-items: center;
}


#rowSplit1 {
  flex: 0.1;
}
#rowSplit2 {
  flex: 0.9;
}
/*
Creates a rectangular container for the boxes
*/
.container {
  width: 65vw;
  height: 74vh;
  position: relative;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  /* border-left: 0.125rem solid black; */
  /* border-top: 0.125rem solid black; */
  border: 0.25rem solid black;
  /* background-color: white; */
  flex-direction: row;
}

.container-plain {
  width: 65vw;
  height: 80vh;
  position: relative;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  /* background-color: rgba(242, 242, 243, 1); */
  flex-direction: row;
}

/* schedule: Monica's section */
.container-plain-schedule {
  width: 100%;
  height: 84%;
  position: relative;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  /* background-color: rgba(242, 242, 243, 1); */
  flex-direction: row;
}



.half-column {
  flex: 1;
  border-left: 0.25rem solid black;
  border-top: 0.25rem solid black;
  border-right: 0.25rem solid black;
  border-bottom: 0.25rem solid black;
  flex-direction: column;
  flex-wrap: wrap;
  display: flex;
}

/* schedule: Monica's section */
.half-column-schedule {
  flex: 1.5;
  /*border-left: 0.25rem solid black;
  border-top: 0.25rem solid black;
  border-right: 0.25rem solid black;
  border-bottom: 0.25rem solid black;*/
  /*border-top: 0.25rem solid black;
  border-bottom: 0.25rem solid black;*/

  flex-direction: column;

  display: flex;
}

.half-column-schedule-small {
  flex: 0.75;
  /*border-left: 0.25rem solid black;
  border-top: 0.25rem solid black;
  border-right: 0.25rem solid black;
  border-bottom: 0.25rem solid black;*/
  flex-direction: column;
  flex-wrap: wrap;
  display: flex;
}




.half-column-plain {
  flex: 1;

  flex-direction: column;
  flex-wrap: wrap;
  display: flex;
  height: 85%;

}

.half-row {
  flex: 1;
  border: 0.25rem solid black;
  flex-direction: column;
  flex-wrap: wrap;
  display: flex;
  height: 50%;
}

.half-row-plain {
    flex: 1;
    flex-direction: column;
    flex-wrap: wrap;
    display: flex;
}



.box {
  height: 32vh;
  width: 22.4vw;
  background-color: #C2DF87;
  border: 0rem solid white;
  overflow: hidden;
  display: flex;
}



.noborder {
  border: 0rem solid white;
}



#last-year-text {
  margin: auto 4%;
}

#star-background {
  height: 40%;
  width: 40%;
  position: absolute;
  bottom: -3vh;
  left: -4vw;
  background: #151041;
}

#star-pic {
  height: 100%;
  width: 100%;
  position: absolute;
  left: 2vh;
  bottom: 2vh;
}

#last-year-pic-box {
  height: 50%;
  text-align: center;
}


#whiteboard-pic {
  height: 70%;
  width: 80%;
  display: block;
  /* margin-top: 20%; */
  margin: 6% auto;
}

#last-year-winners-box {
    height: 50%;
    width: 90%
}

.winner-box {

   margin: auto 5%;
   width: 90%;
   height: 30%;
}

.winner-name {
    margin: 0 0;
    font-size: 1.3vw;
}

.q-box {
    margin: 0% 5%;
    width: 90%;
    height: 30%;
}

.q-box-question {
  font-size: 1.3vw;
  /* margin-top: auto; */
  margin-bottom: .5rem;
}





/*
Classes for the sponsor section
*/

.page {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  align-items: center;
  position: relative;
}





.half-row-div {
  flex: 1;
  margin-left: 15%;
  margin-right: 12%;
  margin-top: 2%;
}



.greenBox {
  height: 100%;
  width: 100%;
  background: linear-gradient(to right, #C2DF87 84.9%, rgba(242, 242, 243, 1) 84.9%);
  border: 0rem solid white;
  /* overflow: visible; */
  display: flex;
}

#dogImage {
  height: 100%;
  width: 85%;
  margin-left: 6%;
  margin-top: 3.5%;
  overflow: hidden;

  border: 0rem solid white;
  background-image: url(dog.png);
}


.blueBox {
  position: absolute;
  top: 19.5%;
  left: 5.3%;
  height: 33.2%;
  width: 16.65%;
  background: linear-gradient(to right, #85AAB2 100%, white 100%);
  border: 0rem solid white;
  /* overflow: visible; */
  display: flex;
}

.earImage {
  position: absolute;
  height: 33%;
  width: 16.65%;
  left: 6.4%;
  top: 21%;
  overflow: hidden;

  border: 0rem solid white;
  background-image: url(e4.png);
}

#noborder {
  border: 0rem solid white;
}

#thiccBorderBottom {
  border-bottom: 0.25rem solid black;
  border-right: 0.25rem solid black;
  border-left: 0;
}

#thiccBorderLeft {
  border-top: 0rem solid black;
  border-right: 0rem solid black;
  border-bottom: 0rem solid black;
  border-left: 0;
}

#thiccMargin {
  border: 0rem solid white;
  margin-top: 2.9vh;
  margin-left: 3.65vw;
}

#smallRow {
  flex: 0.43;
  border: 0rem solid white;
  margin-top: 4%;
  margin-left: 15%;
}

#thiccBorderTop {
  border-top: 0.25rem solid black;
  border-right: 0rem solid black;
  border-bottom: 0rem solid black;
  border-left: 0rem solid black;
}

#bottom-bar {
  background-color: #C2DF87;
  width: 100%;
  height: 20vh;
  margin-bottom: 6vh;
}

#bottom-container {
  width: 65vw;
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 0 auto;
}

#bottom-name {
  display: flex;
  flex-direction: column;
  width: 50%;
  height: 100%;
  align-items: center;
  justify-content: center;
  /* height: 30vh; */
}

#bottom-name-text {
  font-family: 'Shrikhand', cursive;
  font-size: 7vw;
  vertical-align: middle;
}

#bottom-date {
  width: 25%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

#bottom-date-text {
  font-size: 3vw;
  font-weight: 700;
  margin-top: 0;
  margin-bottom: 0;
}

#bottom-be-text {
  margin-top: 0;
  margin-bottom: 0;
}

#be-logo {
  display: flex;
  justify-content: center;
  width: 13%;
}

#be-logo-img {
  height: 50%;
  width: 50%;
}

#bottom-links {
  width: 12%;
  text-decoration: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.bottom-links-text {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 1rem;
}

@media (max-width: 870px) {
  h3 {
    font-size: .8rem;
  }
}

@media (max-width: 600px) {
  h3 {
    font-size: .6rem;
  }
}

@media (max-width: 40rem) {

  p {
    /* margin-top: 0; */
    font-size: 2vw;
  }

  .link-title-text-time {
    margin-bottom: 2vh;
    font-size: 3vw;
  }

  .link-title-text-time-2 {
    margin-bottom: 2vh;
    font-size: 3vw;
  }


  .container {
    width: 80vw;
  }

  .container-plain {
    width: 80vw;
  }

/* schedule: Monica's section */
  .container-plain-schedule {
    width: 40vw;
  }

  #title-date-text {
    margin: 2rem 0;
  }

  #title-sub-title {
    font-size: 4vw;
  }

  #last-year-text {
    font-size: 1.7vw;
  }

  #star-background {
    width: 32%;
    height: 32%;
  }

  .link-item {
    margin: 2rem 0;
  }

  .link-title-text {
    font-size: 4vw;
  }

  .section-title-text {
    font-size: 4vw;
  }

  .winner-name {
    font-size: 2.3vw;
  }

  .q-box-question {
    font-size: 3vw;
  }

}

